# G-MAN-IA

./: .gitignore  CHANGELOG.md  Makefile  README.md  ROADMAP.md  e2e-test.sh  go.mod  go.sum
.github/: release-please-config.json
.github/workflows/: ci.yml  release-please.yml
app/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/e2e/: companion.spec.ts  gman.spec.ts
app/src/: App.svelte  app.css  main.ts  test-setup.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src/lib/: commands.ts  migration.ts  rpc.ts
cmd/gman/: main.go
cmd/harvey/: main.go
cmd/verify-models/: main.go
core/: go.mod
core/cmd/gman-server/: handlers_test.go  main.go  main_test.go
core/cmd/verify-models/: main.go
core/internal/application/: grantmgr_test.go  orchestrator.go  orchestrator_test.go
core/internal/domain/: agent.go  domain_test.go  permission.go  session.go  tool.go
core/internal/transport/: jsonrpc.go  jsonrpc_test.go
core/scripts/: e2e-test.sh
doc/: arquitectura.md  comandos.md  companion-mode.md  context.md  herramientas.md  instalacion.md  uso.md
internal/application/: executor.go  executor_test.go  grantmgr.go  grantmgr_test.go  orchestrator.go  orchestrator_test.go
internal/domain/: agent.go  domain_test.go  sandbox.go  session.go  tool.go
internal/infrastructure/ollama/: client.go  (+1 more)
openspec/: config.yaml
scripts/: build.sh  e2e-test.sh
scripts/verify-tool-use/: main.go
(+70 files in other folders)
