[package]
name = "gman"
version = "1.0.0"
description = "G-MAN — Gentle Machine Augmented Navigator"
authors = ["Gentleman.Dots"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = "2"
